fix small alignment issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -2017,6 +2017,10 @@ select {
   padding-top: 6rem;
 }
 
+.pr-0 {
+  padding-right: 0px;
+}
+
 .text-center {
   text-align: center;
 }
@@ -2260,6 +2264,10 @@ select {
   .md\:py-36 {
     padding-top: 9rem;
     padding-bottom: 9rem;
+  }
+
+  .md\:pr-4 {
+    padding-right: 1rem;
   }
 
   .md\:text-left {
